--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,20 @@
-
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,300);
+@import url(http://fonts.googleapis.com/css?family=Ubuntu:300,400);
 
 body {
-    font-family: 'Helvetica Neue', Helvetica, sans-serif;
+    font-family: 'Open Sans', 'Helvetica Neue', Helvetica, sans-serif;
     font-size: 18px;
     font-weight: 300;
+    background-image: url(../img/background.jpg);
+    background-size: cover;
+    background-attachment: fixed;
+}
+
+h1 {
+	font-family: 'Ubuntu', Helvetica, sans-serif;
+}
+
+main {
+	background-color: rgba(255,255,255,0.7);
+	margin-left: 30%;
 }
