--- a/css/main.css
+++ b/css/main.css
@@ -10,11 +10,38 @@ body {
     background-attachment: fixed;
 }
 
-h1 {
+h1, h2 {
 	font-family: 'Ubuntu', Helvetica, sans-serif;
 }
 
 main {
 	background-color: rgba(255,255,255,0.7);
 	margin-left: 30%;
+	border-radius: 5px;
+}
+
+h1 {
+	margin-top: 0;
+}
+header {
+	background-color: #2492C4;
+	padding: 1em;
+	color: #FFFFFF;
+	border-bottom: 5px solid #1482B4;
+
+}
+
+header p {
+	font-family: 'Ubuntu';
+	font-size: 150%;
+	margin-bottom: 0;
+}
+
+section, footer {
+	padding-left: 1em;
+	padding-right: 1em;
+}
+
+.mission {
+	background-color: rgba(168,207,218,0.7);
 }
